# fuse

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py
.claude/: CLAUDE.md  application_demo.md  architecture.md  feature_addition.md  host_api_spec.md  module_api_spec.md  settings.local.json
.claude/agents/: developer.md  scripter.md  sentinel.md  validator.md
.claude/skills/: application_demos.md  feature_addition.md
core/: fuse_core.c  fuse_event.c  fuse_hal.c  fuse_internal.h  fuse_log.c  fuse_module.c  fuse_policy.c
core/camera/: fuse_hal_camera.c  fuse_hal_camera.h
core/event/: fuse_hal_event.c  fuse_hal_event.h
core/log/: fuse_hal_log.c  fuse_hal_log.h
core/temp/: fuse_hal_temp.c  fuse_hal_temp.h
core/timer/: fuse_hal_timer.c  fuse_hal_timer.h
demos/camera_compress/: CMakeLists.txt  app_config.json  build.sh
demos/camera_compress/host/: main.c
demos/camera_compress/module/: camera_compress.c
demos/camera_compress/policy/: camera_compress_policy.json
demos/camera_compress/tools/: policy_to_bin.py
demos/camera_filter_compress/: CMakeLists.txt  app_config.json  build.sh
demos/camera_filter_compress/host/: main.c
demos/camera_filter_compress/module/: frame_compress.c  frame_filter.c
demos/demo_template/: CMakeLists.txt  build.sh
docker/: Dockerfile
include/: fuse.h  fuse_types.h
platform/: platform.h
platform/freertos/: CMakeLists.txt  FreeRTOSConfig.h  platform.c
platform/linux/: CMakeLists.txt  platform.c
tests/: CMakeLists.txt  fuse_init_test.cpp  fuse_test_helper.cpp  fuse_test_helper.h  test_fuse_event.cpp  test_fuse_hal.cpp  test_fuse_log.cpp  test_fuse_module.cpp  test_fuse_policy.cpp  test_fuse_quota.cpp  test_fuse_scheduling.cpp
tests/modules/: mod_camera.wat  mod_camera_no_cap.wat  mod_camera_oob.wat  mod_camera_zero_len.wat  mod_log.wat  mod_log_long.wat  mod_log_oob.wat  mod_no_step.wat  mod_step_only.wat  mod_temp.wat  mod_temp_no_cap.wat  mod_timer.wat  mod_timer_no_cap.wat  mod_with_init_deinit.wat
tests/platform/freertos/: test_platform_freertos.cpp
tests/platform/linux/: test_platform_linux.cpp
tools/: gen_app_config.py  policy_to_bin.py
